[gd_scene load_steps=3 format=3 uid="uid://b055j8xc26tcw"]

[ext_resource type="Script" path="res://ui/gameover.gd" id="1_n3jqg"]
[ext_resource type="Texture2D" uid="uid://lihptbc7qqpv" path="res://images/splash.png" id="2_xbwag"]

[node name="gameover" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n3jqg")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_xbwag")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -1.0

[node name="Score_text" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.227
anchor_bottom = 0.168
offset_left = 872.0
offset_top = 432.0
offset_right = 826.496
offset_bottom = 533.304
text = "Score:
death"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -424.0
offset_top = -168.0
offset_right = -304.0
offset_bottom = -88.0
grow_horizontal = 0
grow_vertical = 0

[node name="Next Level" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Next Level"

[node name="MainMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="VBoxContainer/Next Level" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
